[package]
name = "pcolor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["async-std", "image"] }
iced_native = "0.2.2"
iced_futures = "0.1.2"
async-std = { version = "1.6.1", features = ["unstable"]}
image = "0.24.0"
native-dialog = "0.6.3"
covrus = { git = "https://github.com/kaaatsu32329/cv-rs", branch = "dev-process" }
ndarray = "0.15.4"
